--- a/app/src/main/res/layout/create_quiz_activity.xml
+++ b/app/src/main/res/layout/create_quiz_activity.xml
@@ -53,12 +53,16 @@
         android:id="@+id/add_question_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="52dp"
-        android:layout_marginEnd="8dp"
         android:text="@string/add_question"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/quiz_name_label"
         app:layout_constraintTop_toBottomOf="@+id/quiz_name_label" />
+
+    <Button
+        android:id="@+id/finish_quiz_but"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/finish_quiz"
+        app:layout_constraintEnd_toEndOf="@+id/quiz_name_input"
+        app:layout_constraintTop_toTopOf="@+id/add_question_button" />
 </android.support.constraint.ConstraintLayout>
