--- a/app/src/main/res/layout/create_quiz_activity.xml
+++ b/app/src/main/res/layout/create_quiz_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateQuiz">
+    tools:context=".CreateQuizActivity">
 
     <EditText
         android:id="@+id/quiz_name_input"
