--- a/app/src/main/res/layout/create_quiz_activity.xml
+++ b/app/src/main/res/layout/create_quiz_activity.xml
@@ -39,15 +39,15 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/question_list"
-        android:layout_width="411dp"
-        android:layout_height="464dp"
+        android:layout_width="405dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_name_label"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/add_question_button" />
 
     <Button
         android:id="@+id/add_question_button"
