--- a/app/src/main/res/layout/home_screen_content.xml
+++ b/app/src/main/res/layout/home_screen_content.xml
@@ -10,40 +10,53 @@
 
     <Button
         android:id="@+id/take_quiz_but"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/take_quiz"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/quiz_name_input_home"
-        app:layout_constraintStart_toStartOf="@+id/quiz_name_input_home"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_name_input_home"
-        app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.308"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quiz_name_input_home" />
 
     <Button
         android:id="@+id/create_quiz_but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="100dp"
         android:text="@string/create_quiz"
-        app:layout_constraintEnd_toEndOf="@+id/take_quiz_but"
-        app:layout_constraintStart_toStartOf="@+id/take_quiz_but"
-        app:layout_constraintTop_toBottomOf="@+id/take_quiz_but" />
+        app:layout_constraintEnd_toEndOf="@+id/quiz_name_input_home"
+        app:layout_constraintStart_toStartOf="@+id/quiz_name_input_home"
+        app:layout_constraintTop_toBottomOf="@+id/quiz_name_input_home" />
 
     <EditText
         android:id="@+id/quiz_name_input_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="140dp"
         android:layout_marginEnd="8dp"
+        android:autofillHints=""
         android:ems="10"
         android:hint="@string/enter_quiz_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/edit_quiz_but"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/edit_quiz"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.703"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quiz_name_input_home" />
 
 </android.support.constraint.ConstraintLayout>
