--- a/app/src/main/res/layout/home_screen_content.xml
+++ b/app/src/main/res/layout/home_screen_content.xml
@@ -25,11 +25,10 @@
         android:id="@+id/create_quiz_but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="8dp"
         android:text="@string/create_quiz"
         app:layout_constraintEnd_toEndOf="@+id/quiz_name_input_home"
-        app:layout_constraintStart_toStartOf="@+id/quiz_name_input_home"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_name_input_home" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_quiz_but" />
 
     <EditText
         android:id="@+id/quiz_name_input_home"
@@ -51,12 +50,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="@string/edit_quiz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.703"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quiz_name_input_home" />
+        app:layout_constraintTop_toTopOf="@+id/take_quiz_but" />
+
+    <Button
+        android:id="@+id/leaderboard_but"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/leaderboard"
+        app:layout_constraintEnd_toStartOf="@+id/create_quiz_but"
+        app:layout_constraintStart_toStartOf="@+id/quiz_name_input_home"
+        app:layout_constraintTop_toBottomOf="@+id/take_quiz_but" />
 
 </android.support.constraint.ConstraintLayout>
