--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="customPurple">#4A4063</color>
+    <color name="customTurquois">#367F7D</color>
+    <color name="customWhite">#E4DFDA</color>
+    <color name="customDarkGrey">#414535</color>
+
 </resources>
