--- a/app/src/main/res/layout/create_quiz_activity.xml
+++ b/app/src/main/res/layout/create_quiz_activity.xml
@@ -23,14 +23,14 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/question_list"
-        android:layout_width="405dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_question_button" />
+        app:layout_constraintTop_toBottomOf="@+id/questions_label"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/add_question_button"
@@ -48,4 +48,18 @@
         android:text="@string/finish_quiz"
         app:layout_constraintEnd_toEndOf="@+id/quiz_name_input"
         app:layout_constraintTop_toTopOf="@+id/add_question_button" />
+
+    <TextView
+        android:id="@+id/questions_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/questions"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/finish_quiz_but"
+        app:layout_constraintStart_toStartOf="@+id/add_question_button"
+        app:layout_constraintTop_toBottomOf="@+id/add_question_button" />
 </android.support.constraint.ConstraintLayout>
