--- a/app/src/main/res/layout/quiz_complete_content.xml
+++ b/app/src/main/res/layout/quiz_complete_content.xml
@@ -15,6 +15,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:gravity="center"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,10 +27,20 @@
         android:id="@+id/start_game_but"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="24dp"
         android:text="@string/start_game"
         app:layout_constraintEnd_toEndOf="@+id/quiz_score"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="@+id/quiz_score"
         app:layout_constraintTop_toBottomOf="@+id/quiz_score" />
+
+    <TextView
+        android:id="@+id/instructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="How to play space invaders:\nTouch the bottom left or right of the screen to move. \nTouch anywhere else to fire.\nYour quiz score determines the lives you start with."
+        app:layout_constraintEnd_toEndOf="@+id/quiz_score"
+        app:layout_constraintStart_toStartOf="@+id/quiz_score"
+        app:layout_constraintTop_toBottomOf="@+id/start_game_but" />
 </android.support.constraint.ConstraintLayout>
