--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,9 @@
     <style name="AppTheme" parent="Theme.AppCompat">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/customWhite</item>
-        <item name="colorPrimaryDark">@color/customPurple</item>
-        <item name="colorAccent">@color/customTurquois</item>
-        <item name="android:windowBackground">@color/customTurquois</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/customWhite</item>
+        <item name="android:windowBackground">@color/colorPrimary</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
