--- a/app/src/main/res/layout/take_quiz_content.xml
+++ b/app/src/main/res/layout/take_quiz_content.xml
@@ -45,14 +45,20 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/choice_1_but"
-        app:layout_constraintTop_toBottomOf="@+id/choice_1_but" />
+        app:layout_constraintTop_toBottomOf="@+id/choice_1_but"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/choice_4_but"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/choice_2_but"
-        app:layout_constraintTop_toBottomOf="@+id/choice_2_but" />
+        app:layout_constraintTop_toBottomOf="@+id/choice_2_but"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
