--- a/app/src/main/res/layout/take_quiz_content.xml
+++ b/app/src/main/res/layout/take_quiz_content.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".TakeQuizActivity"
+    tools:context="TakeQuizActivity"
     tools:showIn="@layout/take_quiz_activity">
 
     <TextView
@@ -15,6 +15,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:textSize="25sp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
