Added leaderboard label

--- a/app/src/main/res/layout/post_game_content.xml
+++ b/app/src/main/res/layout/post_game_content.xml
@@ -15,8 +15,9 @@
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/share_score_but"
+        app:layout_constraintTop_toBottomOf="@+id/leadboard_text"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
@@ -76,4 +77,17 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/save_score_but"
         app:layout_constraintTop_toTopOf="@+id/save_score_but" />
+
+    <TextView
+        android:id="@+id/leadboard_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:text="Leaderboard:"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="@+id/share_score_but"
+        app:layout_constraintStart_toStartOf="@+id/save_score_but"
+        app:layout_constraintTop_toBottomOf="@+id/save_score_but" />
 </android.support.constraint.ConstraintLayout>
